# Rust-Command-Execution-Server

./: .env.cfkv.example  .env.example  .env.sqlite.example  .gitignore  LICENSE  README.md  pyproject.toml
migration/: create_logs_table.sql  create_tasks_table.sql
src/: __init__.py  config.py  main.py
src/application/: router.py
src/application/agent/: dependencies.py  router.py
src/application/agent/commands/: dto.py  handler.py  router.py
src/application/agent/logs/: dto.py  handler.py  router.py
src/application/routers/: agent.py
src/domain/aggregate/agent/: agent_repository.py
src/domain/db/repository/: async_repository.py  nosql_repository.py  sql_repository.py
src/infrastructure/aggregate/agent/: impl_agent_repository.py
src/infrastructure/cloudflare_kv/: impl_cloudflare_kv_repository.py
src/infrastructure/database/: engine.py  impl_sqlite_repository.py
